bases/datamanagement/e2e-transactions/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e2e-transactions
  namespace: datamanagement
  labels:
    app: e2e-transactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e2e-transactions
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        kubectl.kubernetes.io/default-container: app
      labels:
        app: e2e-transactions
    spec:
      containers:
        - name: app
          image: binkcore.azurecr.io/e2e-transactions:prod
          ports:
            - containerPort: 6502
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 512Mi
      imagePullSecrets:
        - name: binkcore.azurecr.io
