bases/datamanagement/e2e-transactions/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: e2e-transactions
  namespace: datamanagement
  labels:
    app: e2e-transactions
spec:
  selector:
    app: e2e-transactions
  ports:
    - protocol: TCP
      port: 6502
      targetPort: 6502
