bases/datamanagement/e2e-transactions/ingress-healthz.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data.${cluster_name}.${location}.bink.sh-healthz
  namespace: datamanagement
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/enable-access-log: 'false'
spec:
  rules:
    - host: data.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: healthz
                port:
                  number: 80
  tls:
    - hosts:
        - data.${cluster_name}.${location}.bink.sh
