bases/datamanagement/e2e-transactions/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data.${cluster_name}.${location}.bink.sh
  namespace: datamanagement
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
spec:
  rules:
    - host: data.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e2e-transactions
                port:
                  number: 6502
  tls:
    - hosts:
        - data.${cluster_name}.${location}.bink.sh
